--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "Module 14 Challenge",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/katepatch/Tech-Blog.git"
   },
-  "keywords": [
-    "[]"
-  ],
+  "keywords": [],
   "author": "Kate Patch",
   "license": "ISC",
   "bugs": {
