--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "tech-blog",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.17.3",
+    "npm": "6.14.13"
+  },
   "description": "Module 14 Challenge",
   "main": "server.js",
   "scripts": {
