--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "tech-blog",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.17.0",
+    "npm": "8.15.0"
+  },
   "description": "Module 14 Challenge",
   "main": "server.js",
   "scripts": {
