--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node ./seeds/seed.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "heroku-prebuild": "npm install --dev"
   },
   "repository": {
     "type": "git",
