--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node ./seeds/seed.js",
-    "dev": "nodemon server.js",
-    "heroku-postbuild": "npm start"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
